@@ -220,12 +220,10 @@ public class HiveInputFormat<K extends WritableComparable, V extends Writable>
     InputFormat inputFormat = getInputFormatFromCache(inputFormatClass,
         cloneJobConf);
 
-    Path [] paths = FileInputFormat.getInputPaths(job);
-    // for now we only get one path for splits which access a non-native
-    // table; should probably add a corresponding assertion
-    PartitionDesc part = getPartitionDescFromPath(
-      pathToPartitionInfo, paths[0]);
-    Utilities.copyTableJobPropertiesToConf(part.getTableDesc(), cloneJobConf);
+    PartitionDesc part = pathToPartitionInfo.get(hsplit.getPath().toString());
+    if ((part != null) && (part.getTableDesc() != null)) {
+      Utilities.copyTableJobPropertiesToConf(part.getTableDesc(), cloneJobConf);
+    }
     return new HiveRecordReader(inputFormat.getRecordReader(inputSplit,
         cloneJobConf, reporter));
   }
